Init new Admin Panel and fix error internal in signup system

--- a/resources/lang/frazionz/fr.json
+++ b/resources/lang/frazionz/fr.json
@@ -24,6 +24,11 @@
             }
         }
     },
+    "notifications": {
+        "support": {
+            "response": "%username% a répondu à votre ticket"
+        }
+    },
     "auth": {
         "register": {
             "validation": {
